--- a/package.json
+++ b/package.json
@@ -40,13 +40,16 @@
     "@angular/router": "^9.1.0",
     "core-js": "^2.5.4",
     "rxjs": "~6.5.4",
+    "tslib": "^1.10.0",
     "zone.js": "^0.10.2"
   },
   "devDependencies": {
+    "@angular-devkit/build-ng-packagr": "~0.901.6",
     "@angular/cli": "9.1.0",
     "@nrwl/workspace": "9.3.0",
     "@types/node": "~8.9.4",
     "dotenv": "6.2.0",
+    "ng-packagr": "^9.0.0",
     "ts-node": "~7.0.0",
     "tslint": "~6.0.0",
     "eslint": "6.8.0",
